<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_relative_layout"
        android:onClick="abrirRelativeLayout"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_frame_layout"
        android:onClick="abrirFrameLayout"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_absolute_layout"
        android:onClick="abrirAbsoluteLayout"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_table_layout"
        android:onClick="abrirTableLayout"/>
</LinearLayout>